--- a/DeepChanVese.ipynb
+++ b/DeepChanVese.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
     "from keras import Model\n",
     "\n",
     "import numpy as np\n",
-    "from resFpn import ResFPN"
+    "# from resFpn import ResFPN"
    ]
   },
   {
