Added fpn layers

--- a/DeepChanVese.ipynb
+++ b/DeepChanVese.ipynb
@@ -35,12 +35,12 @@
     "from keras import Model\n",
     "\n",
     "import numpy as np\n",
-    "# from resFpn import ResFPN"
+    "from resFpn import ResFPN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,21 +67,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"model_1\"\n",
+      "(None, 65, 88, 256)\n",
+      "Model: \"model\"\n",
       "__________________________________________________________________________________________________\n",
       " Layer (type)                   Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
-      " input_2 (InputLayer)           [(None, 260, 352, 3  0           []                               \n",
+      " input_1 (InputLayer)           [(None, 260, 352, 3  0           []                               \n",
       "                                )]                                                                \n",
       "                                                                                                  \n",
-      " conv1_pad (ZeroPadding2D)      (None, 266, 358, 3)  0           ['input_2[0][0]']                \n",
+      " conv1_pad (ZeroPadding2D)      (None, 266, 358, 3)  0           ['input_1[0][0]']                \n",
       "                                                                                                  \n",
       " conv1_conv (Conv2D)            (None, 130, 176, 64  9408        ['conv1_pad[0][0]']              \n",
       "                                )                                                                 \n",
@@ -583,7 +584,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.0 (default, Nov 15 2020, 08:30:55) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
